[gd_scene load_steps=8 format=3 uid="uid://cgjj2bmatef67"]

[ext_resource type="Script" uid="uid://b737eivuus6om" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Material" uid="uid://dy3s0et3j5flo" path="res://assets/materials/blood.tres" id="2_dqkch"]
[ext_resource type="Script" uid="uid://b0pj15tvyuooy" path="res://scripts/gun_controller.gd" id="2_qhqgy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0wfyh"]
radius = 0.28076172

[sub_resource type="CapsuleMesh" id="CapsuleMesh_sugp2"]
material = ExtResource("2_dqkch")

[sub_resource type="SphereShape3D" id="SphereShape3D_g2els"]
radius = 0.4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g2els"]
radius = 0.32714844
height = 1.5698242

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_g2els")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_0wfyh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_sugp2")

[node name="CameraPosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.99999994, 0, 0, 0, 0.99999994, 0, 0.7, 0)

[node name="GunPosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.38170052, -0.85156465)
script = ExtResource("2_qhqgy")

[node name="BumpRay" type="RayCast3D" parent="GunPosition"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.38170052, -0.85156465)
top_level = true
target_position = Vector3(0, 0, -0.5)
collision_mask = 2
collide_with_areas = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, -1.08580185e-08, -1.3700497e-09, 1.0842636e-08, 0.999942, -0.010768458, 1.4868946e-09, 0.010768458, 0.999942, 0, 0.7037544, 0)

[node name="FootRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="Head" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6533369, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head"]
shape = SubResource("SphereShape3D_g2els")

[node name="Body" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.215, 0)
shape = SubResource("CapsuleShape3D_g2els")
